--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# opencv = "0.90.0"
+rusty_ytdl = "0.7.1"
+tokio = { version = "1.37.0", features = ["full"]}
