--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "term_video_cli"
 version = "0.1.0"
 edition = "2021"
+author = ["SL9-1994"]
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,7 +11,6 @@ edition = "2021"
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
 image = "0.25.1"
-# opencv = "0.90.0"
 rusty_ytdl = "0.7.1"
 term_size = "0.3.2"
 tokio = { version = "1.37.0", features = ["full"]}
