--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "term_video_cli"
 version = "0.1.0"
 edition = "2021"
-author = ["SL9-1994"]
+authors = ["SL9-1994"]
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
