feat:✨ 新しい依存関係「colored」と「thiserror」を追加し、バージョンを更新

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ license = "GPL-3.0"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+colored = "3.0.0"
 image = "0.25.1"
 term_size = "0.3.2"
+thiserror = "2.0.12"
